# youtube-disappeared-tracker

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pr_description.md  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  phase_report.md  session_kickstart.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 8dbdd85ed11e_add_channels_table.py  add_videos_and_disappearance_events_tables.py
app/: main.py
app/api/: channels.py  videos.py
app/core/: database.py  i18n.py
app/models/: __init__.py  channel.py  disappearance_event.py  video.py
app/schemas/: channel.py  disappearance_event.py  scan.py  video.py
app/services/: background_jobs.py  slack_notifier.py  video_ingestion.py  youtube_client.py
app/web/: auth.py  routes.py
app/web/static/css/: style.css
app/web/static/js/: app.js  public_app.js
app/web/templates/: base.html  channel_videos.html  channels.html  events.html  public_index.html
docs/: CHANGELOG.md  CONTINUITY.md  api.md  operations.md  phases.md  progress.md  project_guidelines.md  specification.md  tasks.md
docs/runbooks/: observability.md  operations.md
scripts/: rehydrate.py  rollback.py
state/: kickstart_prompt.md  session_state.json
tests/: test_background_jobs.py  test_background_jobs_extended.py  test_channels_api.py  test_main.py  test_migration.py  test_phase5_features.py  test_phase5_simple.py  test_slack_notifier.py  test_video_ingestion.py  test_video_models.py  test_videos_api.py  test_web_auth.py  test_web_routes.py  test_youtube_client.py  test_youtube_client_extended.py
